# vm-backup-snapshot

./: .gitignore  LICENSE.txt  README.mkd  main.hs  vbox-backup-snapshot.cabal  vm-backup-snapshot.cabal
VM/: Snapshot.hs
